# mistral-ocr-parser

./: .env.example  .gitignore  README.md  conftest.py  project_notes.txt  pyproject.toml  requirements.txt  run_examples.py  run_tests.py
.github/workflows/: tests.yml
examples/: batch_processing.py  image_example.py  simple_example.py
mistral_ocr/: __init__.py  image.py  parser.py  utils.py
tests/: __init__.py  test_image.py  test_parser.py
